# ffmpeg-home-video-tools

./: Cargo.toml  Dockerfile  LICENSE  README.md  RUST_README.md  TUI_GUIDE.md  add_missing_audio_tracks.sh  batch_convert_to_mp4.sh  concat_videos.sh  config.example.toml  convert.sh  crop_to_fullhd.sh  pad_to_fullhd.sh  resample_all_audio.sh
bash/: process_videos.sh
bash/processing_steps/: add_missing_audio_tracks.sh  batch_convert_to_mp4.sh  concat_videos.sh  crop_to_fullhd.sh  pad_to_fullhd.sh  resample_all_audio.sh
src/: cli.rs  config.rs  error.rs  ffmpeg.rs  main.rs  orchestrator.rs  tui.rs  types.rs
src/processing/: audio.rs  concat.rs  convert.rs  crop.rs  mod.rs  pad.rs
tests/: integration_test.rs
