[package]
name = "ffmpeg-video-processor"
version = "0.2.0"
edition = "2024"
authors = ["askrejans"]
description = "FFmpeg video processing tool"
license = "MIT"
repository = "https://github.com/askrejans/ffmpeg-home-video-tools"

[[bin]]
name = "ffmpeg-video-processor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# CLI framework
clap = { version = "4.5.53", features = ["derive", "cargo", "env"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.1"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.10"

# File system operations
walkdir = "2.5"
tempfile = "3.23"
dirs = "6.0"

# Date/time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Process management
regex = "1.12.2"
lazy_static = "1.5"
which = "8.0"

# Progress tracking
indicatif = "0.18.3"
atty = "0.2.14"

# System monitoring
sysinfo = "0.37.2"

[dev-dependencies]
mockall = "0.14"
assert_cmd = "2.1.1"
predicates = "3.1.3"
pretty_assertions = "1.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
