[package]
name = "ffmpeg-video-processor"
version = "0.2.1"
edition = "2024"
authors = ["askrejans"]
description = "FFmpeg video processing tool"
license = "MIT"
repository = "https://github.com/askrejans/ffmpeg-home-video-tools"

[[bin]]
name = "ffmpeg-video-processor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.52.0", features = ["full"] }

# CLI framework
clap = { version = "4.6.0", features = ["derive", "cargo", "env"] }

# TUI framework
ratatui = "0.30.0"
crossterm = "0.29"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2+spec-1.1.0"

# File system operations
walkdir = "2.5"
tempfile = "3.27.0"
dirs = "6.0"

# Date/time handling
chrono = { version = "0.4.44", features = ["serde"] }

# Process management
regex = "1.12.3"
lazy_static = "1.5"
which = "8.0.2"

# Progress tracking
indicatif = "0.18.4"
atty = "0.2.14"

# System monitoring
sysinfo = "0.38.4"

[dev-dependencies]
mockall = "0.14"
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
